--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dependencies:
   image_picker_for_web: 2.1.10
   image_picker_ios: 0.8.6+1
   image_picker_platform_interface: 2.6.2
-  intl: 0.17.0
+  intl:  ^0.17.0-nullsafety.2
   json_path: 0.4.1
   mask_text_input_formatter: 2.4.0
   mime_type: 1.0.0
@@ -96,6 +96,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   dio: ^4.0.6
   sliding_up_panel: ^2.0.0+1
+  video_player: ^2.5.1
+  image: ^4.0.15
 
 dependency_overrides:
   rxdart: 0.27.4
