--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,8 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   video_player: ^2.5.1
   image: ^4.0.15
+  flutter_rating_bar: ^4.0.1
+  lottie: ^2.2.0
 
 dependency_overrides:
   rxdart: 0.27.4
