--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,8 @@ dependencies:
   image: ^4.0.15
   flutter_rating_bar: ^4.0.1
   lottie: ^2.2.0
+  stop_watch_timer: ^2.0.0
+  flutter_background: ^1.2.0
 
 dependency_overrides:
   rxdart: 0.27.4
