--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+2
+version: 1.0.4+5
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -70,7 +70,7 @@ dependencies:
   image_picker_for_web: 2.1.10
   image_picker_ios: 0.8.6+1
   image_picker_platform_interface: 2.6.2
-  intl:  ^0.17.0-nullsafety.2
+  intl:  0.17.0-nullsafety.2
   json_path: 0.4.1
   mask_text_input_formatter: 2.4.0
   mime_type: 1.0.0
@@ -106,6 +106,7 @@ dependencies:
 
 dependency_overrides:
   rxdart: 0.27.4
+  intl: 0.18.0
 
 dev_dependencies:
 
