--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.4+5
+version: 1.0.9+9
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -49,7 +49,7 @@ dependencies:
   flutter_datetime_picker: 1.5.1
   font_awesome_flutter: 10.1.0
   from_css_color: 2.0.0
-  geolocator: 9.0.1
+  geolocator: ^9.0.1
   geolocator_android: 4.1.0
   geolocator_apple: 2.2.1
   geolocator_platform_interface: 4.0.6
@@ -103,6 +103,7 @@ dependencies:
   stop_watch_timer: ^2.0.0
   flutter_background: ^1.2.0
   webviewx_plus: ^0.3.3
+  pinput: ^3.0.1
 
 dependency_overrides:
   rxdart: 0.27.4
@@ -133,7 +134,6 @@ flutter:
     - assets/lottie_animations/
     - assets/rive_animations/
     - assets/pdfs/
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
